src/tests/testfiles/function-declarations/18.txt
Error at 2:2: Incompatible conversion returning 'char' from a function with result type 'float *'
return 'a';
^
Error at 6:2: Incompatible conversion returning 'float' from a function with result type 'int'
return 0.0;
^
